add set pin handler in accounts
